exports[`LoadingOverlay should render a null component when isOpen is not provided 1`] = `
<LoadingOverlay
  backgroundStyle="light"
  isAnimated={false}
  isOpen={false}
  isRelativeToContainer={false} />
`;

exports[`LoadingOverlay when isOpen is provided should render with message prop 1`] = `
<LoadingOverlay
  backgroundStyle="light"
  isAnimated={false}
  isOpen={true}
  isRelativeToContainer={false}
  message="Loading!" />
`;

exports[`undefined 1`] = `
<LoadingOverlay
  backgroundStyle="light"
  isAnimated={false}
  isOpen={true}
  isRelativeToContainer={false} />
`;
